[package]
authors = ["Han Tingjun <hantingjun@huawei.com>", "Yijun Yu <yijun.yu@huawei.com>"]
description = "Format output without Rust code segment in binary to reduce the ultimate binary size"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trusted-programming/cfmt"
readme = "README.md"
name = "orion_cfmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfmt-macros = { path = "macros", version = "0.2.0" }

[workspace]
members = [
    "macros"
]
